--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha3",
+    "daisyui": "^2.51.6",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "react": "^18.2.0",
