--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "daisyui": "^2.51.6",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.24",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
